[WIP] implemented updateBoardState method and send to redis board changes